--- a/AspNetWebFormsApp/Web.config
+++ b/AspNetWebFormsApp/Web.config
@@ -10,7 +10,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
+   
+    <!-- Wissem: DICOM server configurations -->
     <add key="app:PacsStorageConnection" value="|DataDirectory|\App_Data\Storage\ds" />
     <add key="app:PacsDataArchieve" value="packet size=4096;persist security info=True;Data Source=DACIMADEV;Initial Catalog=dacima_DICOM;Connect Timeout=300; Trusted_Connection=Yes" />
     <add key="app:WadoRsUrl" value="/wadors/" />
@@ -27,6 +28,7 @@
   
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
+    <!-- Wissem: up to 3GB -->
     <httpRuntime maxRequestLength="3221225" targetFramework="4.6.1" />
     <customErrors mode="Off" />
     <pages>
@@ -331,6 +333,7 @@
   </runtime>
   
   <system.webServer>
+    <!-- Wissem: Redirect to study configurations -->
     <rewrite>
       <rules>
         <rule name="SPA Routes" stopProcessing="true">
@@ -346,6 +349,7 @@
     </rewrite>
 
     <httpProtocol>
+      <!-- Wissem: Enable CORS requests -->
       <customHeaders>
         <add name="Access-Control-Allow-Headers" value="Access-Control-Allow-Headers, Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers" />
         <add name="X-Frame-Options" value="SAMEORIGIN" />
@@ -354,6 +358,7 @@
     </httpProtocol>
     <security>
       <requestFiltering>
+        <!-- Wissem: up to 3GB -->
         <requestLimits maxAllowedContentLength="3221225472" />
       </requestFiltering>
     </security>
